fix smart underline to wrap correctly

--- a/assets/sass/mixins.scss
+++ b/assets/sass/mixins.scss
@@ -11,7 +11,8 @@
   background-size: #{$viewbox-x}px #{$viewbox-y}px;
 }
 
-@mixin vd-smart-underline($color: $gray-lightest, $background: $body-bg, $size: 8px, $position: 0.8em) {
+@mixin vd-smart-underline($color: $gray-lightest, $background: $body-bg, $size: 8px, $position: 0.6em) {
+  display: inline;
   background-image: linear-gradient($background 50%, $color 50%);
   background-size: 1px $size;
   background-repeat: repeat-x;
